# music-genre-classification

./: .gitignore  Makefile  env_vars_sample  pyproject.toml
api/: file_upload.py  use_model.py
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/modeling/: baseline_models.md
music_genre_clf/data_models/: environment.py  experiments.py
music_genre_clf/environment/: base.py
music_genre_clf/models/: experiments.py  feat_extraction.py  feature_engineering.py  signal_feat_clf.py
music_genre_clf/preprocessing/: data_wrangling.py  extract_signal_feats.py  organize_data.py  pp_signal_num_fts.py
music_genre_clf/utils/: io.py
scripts/data_acquisition/: download-data.sh  download_data.sh  organize-data.sh
scripts/eda/: eda-signal.py  eda.py
