[tool.poetry]
name = "music_genre_clf"
version = "0.1.0"
description = "Project for music genres classification."
authors = ["Alvaro Rodriguez <aldrodriguezca@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.8"
jupytext = "^1.13.3"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
