[tool.poetry]
name = "music_genre_clf"
version = "0.1.0"
description = "Music genre classifier leveraging spectrogram images."
authors = ["Alvaro Rodriguez <aldrodriguezca@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
sklearn = "^0.0"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
kaggle = "^1.5.12"
jupytext = "^1.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
